got rid of pin color, made user pins a different color
